--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lintfix": "prettier --write --list-different . && pnpm lint:js --fix"
   },
   "devDependencies": {
+    "@element-plus/nuxt": "^1.0.5",
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
@@ -36,5 +37,8 @@
     "postcss-preset-env": "^9.0.0",
     "prettier": "^3.0.0",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "element-plus": "^2.3.7"
   }
 }
