--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0"
+    "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.4.0"
   }
 }
