--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "postcss-nesting": "^12.0.0",
     "postcss-preset-env": "^9.0.0",
     "prettier": "^3.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vue-i18n": "^9.2.2"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
