feat: google adsens added

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,8 @@
 ###
 # API 
 API_BASE_URL=http://localhost:9000/api/mock
+
+###
+# GOOGLE ADSENSE
+GOOGLE_ADSENSE_ID=ca-pub-###
+GOOGLE_ADSENSE_TEST_MODE=true
