--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,8 @@
     "source.fixAll.eslint": true
   },
   "scss.lint.unknownAtRules": "ignore",
-  "editor.formatOnSave": false
+  "editor.formatOnSave": false,
+  "cSpell.words": [
+    "adsbygoogle"
+  ]
 }
