--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@nuxtjs/google-adsense": "^2.1.0",
     "@nuxtjs/google-fonts": "^3.0.1",
     "axios": "^1.4.0"
   }
