feat: Analytics added to project

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,7 @@ API_BASE_URL=http://localhost:9000/api/mock
 # GOOGLE ADSENSE
 GOOGLE_ADSENSE_ID=ca-pub-###
 GOOGLE_ADSENSE_TEST_MODE=true
+
+###
+# GOOGLE ANALYTICS
+GOOGLE_ANALYTICS=G-###
