--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-preset-env": "^9.0.0",
     "prettier": "^3.0.0",
     "typescript": "^5.1.6",
+    "vue-gtag-next": "^1.14.0",
     "vue-i18n": "^9.2.2"
   },
   "dependencies": {
